# MaSheba--AI

./: .env.example  .gitignore  .graphifyignore  ARCHITECTURE.md  LICENSE  README.md  login_sheet.xml  maasheba_comprehensive_handbook.md.resolved  modal_layout.xml  package-lock.json  profile_layout.xml  render.yaml  scratch_admin_create.py  scratch_login.py  scratch_seed_qa.py  scratch_signup.py  scratch_test.py
.github/workflows/: ci.yml
admin/: .env.local.example  docs_config.json  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
admin/app/: globals.css  layout.tsx
admin/components/: AdminShell.tsx  AdminTable.tsx  AssignChwModal.tsx  ChwActions.tsx  ChwDirectoryClient.tsx  ChwReviewsClient.tsx  (+19 more)
backend/: pytest.ini  requirements-dev.txt  requirements.txt
docs/: API.md  SCHEMA.md  SETUP.md  SYNC_RUNBOOK.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
mobile/: .env.example  app.json  generate-assets.js  jest.setup.ts  metro.config.js  package-lock.json  package.json  process-user-icon.js  react-test-renderer.d.ts  sotorkota_layout.xml  tsconfig.json  window_dump.xml
model/: README.md  pyproject.toml
model/artifacts/: model.onnx  trained_feature_schema.json
model/config/: feature_schema.json  risk_thresholds.json
model/scripts/: __init__.py  _common.py  benchmark_onnx.py  export_onnx.py  prepare_dataset.py  profile_sources.py  train_xgboost.py  validate_model.py
model/tests/: conftest.py  test_feature_mapping.py  test_onnx_parity.py
supabase/: config.toml
(+244 files in other folders)
